prototype/app/generated/parser.js
listcalcParser = (function(){
    /*
     * Generated by PEG.js 0.7.0.
     *
     * http://pegjs.majda.cz/
     */

    function quote(s) {
        /*
         * ECMA-262, 5th ed., 7.8.4: All characters may appear literally in a
         * string literal except for the closing quote character, backslash,
         * carriage return, line separator, paragraph separator, and line feed.
         * Any character may appear in the form of an escape sequence.
         *
         * For portability, we also escape escape all control and non-ASCII
         * characters. Note that "\0" and "\v" escape sequences are not used
         * because JSHint does not like the first and IE the second.
         */
        return '"' + s
            .replace(/\\/g, '\\\\')  // backslash
            .replace(/"/g, '\\"')    // closing quote character
            .replace(/\x08/g, '\\b') // backspace
            .replace(/\t/g, '\\t')   // horizontal tab
            .replace(/\n/g, '\\n')   // line feed
            .replace(/\f/g, '\\f')   // form feed
            .replace(/\r/g, '\\r')   // carriage return
            .replace(/[\x00-\x07\x0B\x0E-\x1F\x80-\uFFFF]/g, escape)
            + '"';
    }

    var result = {
        /*
         * Parses the input with a generated parser. If the parsing is successfull,
         * returns a value explicitly or implicitly specified by the grammar from
         * which the parser was generated (see |PEG.buildParser|). If the parsing is
         * unsuccessful, throws |PEG.parser.SyntaxError| describing the error.
         */
        parse: function(input, startRule) {
            var parseFunctions = {
                "bool": parse_bool,
                "boolAnd": parse_boolAnd,
                "comparison": parse_comparison,
                "additive": parse_additive,
                "multiplicative": parse_multiplicative,
                "primary": parse_primary,
                "path": parse_path,
                "pathEx": parse_pathEx,
                "function": parse_function,
                "paramList": parse_paramList,
                "params": parse_params,
                "number": parse_number,
                "identifier": parse_identifier,
                "__": parse___,
                "eol": parse_eol,
                "eolChar": parse_eolChar,
                "whitespace": parse_whitespace
            };

            if (startRule !== undefined) {
                if (parseFunctions[startRule] === undefined) {
                    throw new Error("Invalid rule name: " + quote(startRule) + ".");
                }
            } else {
                startRule = "bool";
            }

            var pos = { offset: 0, line: 1, column: 1, seenCR: false };
            var reportFailures = 0;
            var rightmostFailuresPos = { offset: 0, line: 1, column: 1, seenCR: false };
            var rightmostFailuresExpected = [];
            var cache = {};

            function padLeft(input, padding, length) {
                var result = input;

                var padLength = length - input.length;
                for (var i = 0; i < padLength; i++) {
                    result = padding + result;
                }

                return result;
            }

            function escape(ch) {
                var charCode = ch.charCodeAt(0);
                var escapeChar;
                var length;

                if (charCode <= 0xFF) {
                    escapeChar = 'x';
                    length = 2;
                } else {
                    escapeChar = 'u';
                    length = 4;
                }

                return '\\' + escapeChar + padLeft(charCode.toString(16).toUpperCase(), '0', length);
            }

            function clone(object) {
                var result = {};
                for (var key in object) {
                    result[key] = object[key];
                }
                return result;
            }

            function advance(pos, n) {
                var endOffset = pos.offset + n;

                for (var offset = pos.offset; offset < endOffset; offset++) {
                    var ch = input.charAt(offset);
                    if (ch === "\n") {
                        if (!pos.seenCR) { pos.line++; }
                        pos.column = 1;
                        pos.seenCR = false;
                    } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
                        pos.line++;
                        pos.column = 1;
                        pos.seenCR = true;
                    } else {
                        pos.column++;
                        pos.seenCR = false;
                    }
                }

                pos.offset += n;
            }

            function matchFailed(failure) {
                if (pos.offset < rightmostFailuresPos.offset) {
                    return;
                }

                if (pos.offset > rightmostFailuresPos.offset) {
                    rightmostFailuresPos = clone(pos);
                    rightmostFailuresExpected = [];
                }

                rightmostFailuresExpected.push(failure);
            }

            function parse_bool() {
                var cacheKey = "bool@" + pos.offset;
                var cachedResult = cache[cacheKey];
                if (cachedResult) {
                    pos = clone(cachedResult.nextPos);
                    return cachedResult.result;
                }

                var result0, result1, result2;
                var pos0, pos1;

                pos0 = clone(pos);
                pos1 = clone(pos);
                result0 = parse_boolAnd();
                if (result0 !== null) {
                    if (input.substr(pos.offset, 2) === "||") {
                        result1 = "||";
                        advance(pos, 2);
                    } else {
                        result1 = null;
                        if (reportFailures === 0) {
                            matchFailed("\"||\"");
                        }
                    }
                    if (result1 !== null) {
                        result2 = parse_bool();
                        if (result2 !== null) {
                            result0 = [result0, result1, result2];
                        } else {
                            result0 = null;
                            pos = clone(pos1);
                        }
                    } else {
                        result0 = null;
                        pos = clone(pos1);
                    }
                } else {
                    result0 = null;
                    pos = clone(pos1);
                }
                if (result0 !== null) {
                    result0 = (function(offset, line, column, left, right) { return binary("||", left, right); })(pos0.offset, pos0.line, pos0.column, result0[0], result0[2]);
                }
                if (result0 === null) {
                    pos = clone(pos0);
                }
                if (result0 === null) {
                    result0 = parse_boolAnd();
                }

                cache[cacheKey] = {
                    nextPos: clone(pos),
                    result:  result0
                };
                return result0;
            }

            function parse_boolAnd() {
                var cacheKey = "boolAnd@" + pos.offset;
                var cachedResult = cache[cacheKey];
                if (cachedResult) {
                    pos = clone(cachedResult.nextPos);
                    return cachedResult.result;
                }

                var result0, result1, result2;
                var pos0, pos1;

                pos0 = clone(pos);
                pos1 = clone(pos);
                result0 = parse_comparison();
                if (result0 !== null) {
                    if (input.substr(pos.offset, 2) === "&&") {
                        result1 = "&&";
                        advance(pos, 2);
                    } else {
                        result1 = null;
                        if (reportFailures === 0) {
                            matchFailed("\"&&\"");
                        }
                    }
                    if (result1 !== null) {
                        result2 = parse_boolAnd();
                        if (result2 !== null) {
                            result0 = [result0, result1, result2];
                        } else {
                            result0 = null;
                            pos = clone(pos1);
                        }
                    } else {
                        result0 = null;
                        pos = clone(pos1);
                    }
                } else {
                    result0 = null;
                    pos = clone(pos1);
                }
                if (result0 !== null) {
                    result0 = (function(offset, line, column, left, right) { return binary("&&", left, right); })(pos0.offset, pos0.line, pos0.column, result0[0], result0[2]);
                }
                if (result0 === null) {
                    pos = clone(pos0);
                }
                if (result0 === null) {
                    result0 = parse_comparison();
                }

                cache[cacheKey] = {
                    nextPos: clone(pos),
                    result:  result0
                };
                return result0;
            }

            function parse_comparison() {
                var cacheKey = "comparison@" + pos.offset;
                var cachedResult = cache[cacheKey];
                if (cachedResult) {
                    pos = clone(cachedResult.nextPos);
                    return cachedResult.result;
                }

                var result0, result1, result2;
                var pos0, pos1;

                pos0 = clone(pos);
                pos1 = clone(pos);
                result0 = parse_additive();
                if (result0 !== null) {
                    if (input.charCodeAt(pos.offset) === 60) {
                        result1 = "<";
                        advance(pos, 1);
                    } else {
                        result1 = null;
                        if (reportFailures === 0) {
                            matchFailed("\"<\"");
                        }
                    }
                    if (result1 !== null) {
                        result2 = parse_additive();
                        if (result2 !== null) {
                            result0 = [result0, result1, result2];
                        } else {
                            result0 = null;
                            pos = clone(pos1);
                        }
                    } else {
                        result0 = null;
                        pos = clone(pos1);
                    }
                } else {
                    result0 = null;
                    pos = clone(pos1);
                }
                if (result0 !== null) {
                    result0 = (function(offset, line, column, left, right) { return binary("<", left, right); })(pos0.offset, pos0.line, pos0.column, result0[0], result0[2]);
                }
                if (result0 === null) {
                    pos = clone(pos0);
                }
                if (result0 === null) {
                    pos0 = clone(pos);
                    pos1 = clone(pos);
                    result0 = parse_additive();
                    if (result0 !== null) {
                        if (input.charCodeAt(pos.offset) === 62) {
                            result1 = ">";
                            advance(pos, 1);
                        } else {
                            result1 = null;
                            if (reportFailures === 0) {
                                matchFailed("\">\"");
                            }
                        }
                        if (result1 !== null) {
                            result2 = parse_additive();
                            if (result2 !== null) {
                                result0 = [result0, result1, result2];
                            } else {
                                result0 = null;
                                pos = clone(pos1);
                            }
                        } else {
                            result0 = null;
                            pos = clone(pos1);
                        }
                    } else {
                        result0 = null;
                        pos = clone(pos1);
                    }
                    if (result0 !== null) {
                        result0 = (function(offset, line, column, left, right) { return binary(">", left, right); })(pos0.offset, pos0.line, pos0.column, result0[0], result0[2]);
                    }
                    if (result0 === null) {
                        pos = clone(pos0);
                    }
                    if (result0 === null) {
                        pos0 = clone(pos);
                        pos1 = clone(pos);
                        result0 = parse_additive();
                        if (result0 !== null) {
                            if (input.substr(pos.offset, 2) === "==") {
                                result1 = "==";
                                advance(pos, 2);
                            } else {
                                result1 = null;
                                if (reportFailures === 0) {
                                    matchFailed("\"==\"");
                                }
                            }
                            if (result1 !== null) {
                                result2 = parse_additive();
                                if (result2 !== null) {
                                    result0 = [result0, result1, result2];
                                } else {
                                    result0 = null;
                                    pos = clone(pos1);
                                }
                            } else {
                                result0 = null;
                                pos = clone(pos1);
                            }
                        } else {
                            result0 = null;
                            pos = clone(pos1);
                        }
                        if (result0 !== null) {
                            result0 = (function(offset, line, column, left, right) { return binary("==", left, right); })(pos0.offset, pos0.line, pos0.column, result0[0], result0[2]);
                        }
                        if (result0 === null) {
                            pos = clone(pos0);
                        }
                        if (result0 === null) {
                            result0 = parse_additive();
                        }
                    }
                }

                cache[cacheKey] = {
                    nextPos: clone(pos),
                    result:  result0
                };
                return result0;
            }

            function parse_additive() {
                var cacheKey = "additive@" + pos.offset;
                var cachedResult = cache[cacheKey];
                if (cachedResult) {
                    pos = clone(cachedResult.nextPos);
                    return cachedResult.result;
                }

                var result0, result1, result2;
                var pos0, pos1;

                pos0 = clone(pos);
                pos1 = clone(pos);
                result0 = parse_multiplicative();
                if (result0 !== null) {
                    if (input.charCodeAt(pos.offset) === 43) {
                        result1 = "+";
                        advance(pos, 1);
                    } else {
                        result1 = null;
                        if (reportFailures === 0) {
                            matchFailed("\"+\"");
                        }
                    }
                    if (result1 !== null) {
                        result2 = parse_additive();
                        if (result2 !== null) {
                            result0 = [result0, result1, result2];
                        } else {
                            result0 = null;
                            pos = clone(pos1);
                        }
                    } else {
                        result0 = null;
                        pos = clone(pos1);
                    }
                } else {
                    result0 = null;
                    pos = clone(pos1);
                }
                if (result0 !== null) {
                    result0 = (function(offset, line, column, left, right) { return binary("+", left, right); })(pos0.offset, pos0.line, pos0.column, result0[0], result0[2]);
                }
                if (result0 === null) {
                    pos = clone(pos0);
                }
                if (result0 === null) {
                    pos0 = clone(pos);
                    pos1 = clone(pos);
                    result0 = parse_multiplicative();
                    if (result0 !== null) {
                        if (input.charCodeAt(pos.offset) === 45) {
                            result1 = "-";
                            advance(pos, 1);
                        } else {
                            result1 = null;
                            if (reportFailures === 0) {
                                matchFailed("\"-\"");
                            }
                        }
                        if (result1 !== null) {
                            result2 = parse_additive();
                            if (result2 !== null) {
                                result0 = [result0, result1, result2];
                            } else {
                                result0 = null;
                                pos = clone(pos1);
                            }
                        } else {
                            result0 = null;
                            pos = clone(pos1);
                        }
                    } else {
                        result0 = null;
                        pos = clone(pos1);
                    }
                    if (result0 !== null) {
                        result0 = (function(offset, line, column, left, right) { return binary("-", left, right); })(pos0.offset, pos0.line, pos0.column, result0[0], result0[2]);
                    }
                    if (result0 === null) {
                        pos = clone(pos0);
                    }
                    if (result0 === null) {
                        result0 = parse_multiplicative();
                    }
                }

                cache[cacheKey] = {
                    nextPos: clone(pos),
                    result:  result0
                };
                return result0;
            }

            function parse_multiplicative() {
                var cacheKey = "multiplicative@" + pos.offset;
                var cachedResult = cache[cacheKey];
                if (cachedResult) {
                    pos = clone(cachedResult.nextPos);
                    return cachedResult.result;
                }

                var result0, result1, result2;
                var pos0, pos1;

                pos0 = clone(pos);
                pos1 = clone(pos);
                result0 = parse_primary();
                if (result0 !== null) {
                    if (input.charCodeAt(pos.offset) === 42) {
                        result1 = "*";
                        advance(pos, 1);
                    } else {
                        result1 = null;
                        if (reportFailures === 0) {
                            matchFailed("\"*\"");
                        }
                    }
                    if (result1 !== null) {
                        result2 = parse_multiplicative();
                        if (result2 !== null) {
                            result0 = [result0, result1, result2];
                        } else {
                            result0 = null;
                            pos = clone(pos1);
                        }
                    } else {
                        result0 = null;
                        pos = clone(pos1);
                    }
                } else {
                    result0 = null;
                    pos = clone(pos1);
                }
                if (result0 !== null) {
                    result0 = (function(offset, line, column, left, right) { return binary("*", left, right); })(pos0.offset, pos0.line, pos0.column, result0[0], result0[2]);
                }
                if (result0 === null) {
                    pos = clone(pos0);
                }
                if (result0 === null) {
                    pos0 = clone(pos);
                    pos1 = clone(pos);
                    result0 = parse_primary();
                    if (result0 !== null) {
                        if (input.charCodeAt(pos.offset) === 47) {
                            result1 = "/";
                            advance(pos, 1);
                        } else {
                            result1 = null;
                            if (reportFailures === 0) {
                                matchFailed("\"/\"");
                            }
                        }
                        if (result1 !== null) {
                            result2 = parse_multiplicative();
                            if (result2 !== null) {
                                result0 = [result0, result1, result2];
                            } else {
                                result0 = null;
                                pos = clone(pos1);
                            }
                        } else {
                            result0 = null;
                            pos = clone(pos1);
                        }
                    } else {
                        result0 = null;
                        pos = clone(pos1);
                    }
                    if (result0 !== null) {
                        result0 = (function(offset, line, column, left, right) { return binary("/", left, right); })(pos0.offset, pos0.line, pos0.column, result0[0], result0[2]);
                    }
                    if (result0 === null) {
                        pos = clone(pos0);
                    }
                    if (result0 === null) {
                        result0 = parse_primary();
                    }
                }

                cache[cacheKey] = {
                    nextPos: clone(pos),
                    result:  result0
                };
                return result0;
            }

            function parse_primary() {
                var cacheKey = "primary@" + pos.offset;
                var cachedResult = cache[cacheKey];
                if (cachedResult) {
                    pos = clone(cachedResult.nextPos);
                    return cachedResult.result;
                }

                var result0, result1, result2, result3, result4;
                var pos0, pos1, pos2, pos3;

                pos0 = clone(pos);
                pos1 = clone(pos);
                result0 = parse___();
                if (result0 !== null) {
                    result1 = parse_number();
                    if (result1 !== null) {
                        result2 = parse___();
                        if (result2 !== null) {
                            result0 = [result0, result1, result2];
                        } else {
                            result0 = null;
                            pos = clone(pos1);
                        }
                    } else {
                        result0 = null;
                        pos = clone(pos1);
                    }
                } else {
                    result0 = null;
                    pos = clone(pos1);
                }
                if (result0 !== null) {
                    result0 = (function(offset, line, column, nb) { return nb; })(pos0.offset, pos0.line, pos0.column, result0[1]);
                }
                if (result0 === null) {
                    pos = clone(pos0);
                }
                if (result0 === null) {
                    result0 = parse_path();
                    if (result0 === null) {
                        pos0 = clone(pos);
                        pos1 = clone(pos);
                        result0 = parse___();
                        if (result0 !== null) {
                            if (input.charCodeAt(pos.offset) === 123) {
                                result1 = "{";
                                advance(pos, 1);
                            } else {
                                result1 = null;
                                if (reportFailures === 0) {
                                    matchFailed("\"{\"");
                                }
                            }
                            if (result1 !== null) {
                                result2 = [];
                                pos2 = clone(pos);
                                pos3 = clone(pos);
                                reportFailures++;
                                if (input.charCodeAt(pos.offset) === 125) {
                                    result3 = "}";
                                    advance(pos, 1);
                                } else {
                                    result3 = null;
                                    if (reportFailures === 0) {
                                        matchFailed("\"}\"");
                                    }
                                }
                                reportFailures--;
                                if (result3 === null) {
                                    result3 = "";
                                } else {
                                    result3 = null;
                                    pos = clone(pos3);
                                }
                                if (result3 !== null) {
                                    if (input.length > pos.offset) {
                                        result4 = input.charAt(pos.offset);
                                        advance(pos, 1);
                                    } else {
                                        result4 = null;
                                        if (reportFailures === 0) {
                                            matchFailed("any character");
                                        }
                                    }
                                    if (result4 !== null) {
                                        result3 = [result3, result4];
                                    } else {
                                        result3 = null;
                                        pos = clone(pos2);
                                    }
                                } else {
                                    result3 = null;
                                    pos = clone(pos2);
                                }
                                while (result3 !== null) {
                                    result2.push(result3);
                                    pos2 = clone(pos);
                                    pos3 = clone(pos);
                                    reportFailures++;
                                    if (input.charCodeAt(pos.offset) === 125) {
                                        result3 = "}";
                                        advance(pos, 1);
                                    } else {
                                        result3 = null;
                                        if (reportFailures === 0) {
                                            matchFailed("\"}\"");
                                        }
                                    }
                                    reportFailures--;
                                    if (result3 === null) {
                                        result3 = "";
                                    } else {
                                        result3 = null;
                                        pos = clone(pos3);
                                    }
                                    if (result3 !== null) {
                                        if (input.length > pos.offset) {
                                            result4 = input.charAt(pos.offset);
                                            advance(pos, 1);
                                        } else {
                                            result4 = null;
                                            if (reportFailures === 0) {
                                                matchFailed("any character");
                                            }
                                        }
                                        if (result4 !== null) {
                                            result3 = [result3, result4];
                                        } else {
                                            result3 = null;
                                            pos = clone(pos2);
                                        }
                                    } else {
                                        result3 = null;
                                        pos = clone(pos2);
                                    }
                                }
                                if (result2 !== null) {
                                    if (input.charCodeAt(pos.offset) === 125) {
                                        result3 = "}";
                                        advance(pos, 1);
                                    } else {
                                        result3 = null;
                                        if (reportFailures === 0) {
                                            matchFailed("\"}\"");
                                        }
                                    }
                                    if (result3 !== null) {
                                        result0 = [result0, result1, result2, result3];
                                    } else {
                                        result0 = null;
                                        pos = clone(pos1);
                                    }
                                } else {
                                    result0 = null;
                                    pos = clone(pos1);
                                }
                            } else {
                                result0 = null;
                                pos = clone(pos1);
                            }
                        } else {
                            result0 = null;
                            pos = clone(pos1);
                        }
                        if (result0 !== null) {
                            result0 = (function(offset, line, column, js) { return {
                                type: "js",
                                execution: js.map(function(a){return a[1]}).join("")
                            };
                            })(pos0.offset, pos0.line, pos0.column, result0[2]);
                        }
                        if (result0 === null) {
                            pos = clone(pos0);
                        }
                        if (result0 === null) {
                            pos0 = clone(pos);
                            pos1 = clone(pos);
                            result0 = parse___();
                            if (result0 !== null) {
                                if (input.charCodeAt(pos.offset) === 40) {
                                    result1 = "(";
                                    advance(pos, 1);
                                } else {
                                    result1 = null;
                                    if (reportFailures === 0) {
                                        matchFailed("\"(\"");
                                    }
                                }
                                if (result1 !== null) {
                                    result2 = parse_additive();
                                    if (result2 !== null) {
                                        if (input.charCodeAt(pos.offset) === 41) {
                                            result3 = ")";
                                            advance(pos, 1);
                                        } else {
                                            result3 = null;
                                            if (reportFailures === 0) {
                                                matchFailed("\")\"");
                                            }
                                        }
                                        if (result3 !== null) {
                                            result4 = parse___();
                                            if (result4 !== null) {
                                                result0 = [result0, result1, result2, result3, result4];
                                            } else {
                                                result0 = null;
                                                pos = clone(pos1);
                                            }
                                        } else {
                                            result0 = null;
                                            pos = clone(pos1);
                                        }
                                    } else {
                                        result0 = null;
                                        pos = clone(pos1);
                                    }
                                } else {
                                    result0 = null;
                                    pos = clone(pos1);
                                }
                            } else {
                                result0 = null;
                                pos = clone(pos1);
                            }
                            if (result0 !== null) {
                                result0 = (function(offset, line, column, additive) { return additive; })(pos0.offset, pos0.line, pos0.column, result0[2]);
                            }
                            if (result0 === null) {
                                pos = clone(pos0);
                            }
                        }
                    }
                }

                cache[cacheKey] = {
                    nextPos: clone(pos),
                    result:  result0
                };
                return result0;
            }

            function parse_path() {
                var cacheKey = "path@" + pos.offset;
                var cachedResult = cache[cacheKey];
                if (cachedResult) {
                    pos = clone(cachedResult.nextPos);
                    return cachedResult.result;
                }

                var result0, result1;
                var pos0, pos1;

                pos0 = clone(pos);
                pos1 = clone(pos);
                result0 = parse_function();
                if (result0 !== null) {
                    result1 = parse_pathEx();
                    result1 = result1 !== null ? result1 : "";
                    if (result1 !== null) {
                        result0 = [result0, result1];
                    } else {
                        result0 = null;
                        pos = clone(pos1);
                    }
                } else {
                    result0 = null;
                    pos = clone(pos1);
                }
                if (result0 !== null) {
                    result0 = (function(offset, line, column, f, p) {
                        if (p==="") return f;
                        return {
                            type: "access",
                            data: f,
                            operand: p
                        };
                    })(pos0.offset, pos0.line, pos0.column, result0[0], result0[1]);
                }
                if (result0 === null) {
                    pos = clone(pos0);
                }

                cache[cacheKey] = {
                    nextPos: clone(pos),
                    result:  result0
                };
                return result0;
            }

            function parse_pathEx() {
                var cacheKey = "pathEx@" + pos.offset;
                var cachedResult = cache[cacheKey];
                if (cachedResult) {
                    pos = clone(cachedResult.nextPos);
                    return cachedResult.result;
                }

                var result0, result1, result2;
                var pos0, pos1;

                pos0 = clone(pos);
                pos1 = clone(pos);
                result0 = parse___();
                if (result0 !== null) {
                    if (input.charCodeAt(pos.offset) === 46) {
                        result1 = ".";
                        advance(pos, 1);
                    } else {
                        result1 = null;
                        if (reportFailures === 0) {
                            matchFailed("\".\"");
                        }
                    }
                    if (result1 !== null) {
                        result2 = parse_path();
                        if (result2 !== null) {
                            result0 = [result0, result1, result2];
                        } else {
                            result0 = null;
                            pos = clone(pos1);
                        }
                    } else {
                        result0 = null;
                        pos = clone(pos1);
                    }
                } else {
                    result0 = null;
                    pos = clone(pos1);
                }
                if (result0 !== null) {
                    result0 = (function(offset, line, column, p) {return p;})(pos0.offset, pos0.line, pos0.column, result0[2]);
                }
                if (result0 === null) {
                    pos = clone(pos0);
                }

                cache[cacheKey] = {
                    nextPos: clone(pos),
                    result:  result0
                };
                return result0;
            }

            function parse_function() {
                var cacheKey = "function@" + pos.offset;
                var cachedResult = cache[cacheKey];
                if (cachedResult) {
                    pos = clone(cachedResult.nextPos);
                    return cachedResult.result;
                }

                var result0, result1, result2, result3, result4;
                var pos0, pos1;

                pos0 = clone(pos);
                pos1 = clone(pos);
                result0 = parse___();
                if (result0 !== null) {
                    result1 = parse_identifier();
                    if (result1 !== null) {
                        result2 = parse___();
                        if (result2 !== null) {
                            result3 = parse_paramList();
                            result3 = result3 !== null ? result3 : "";
                            if (result3 !== null) {
                                result4 = parse___();
                                if (result4 !== null) {
                                    result0 = [result0, result1, result2, result3, result4];
                                } else {
                                    result0 = null;
                                    pos = clone(pos1);
                                }
                            } else {
                                result0 = null;
                                pos = clone(pos1);
                            }
                        } else {
                            result0 = null;
                            pos = clone(pos1);
                        }
                    } else {
                        result0 = null;
                        pos = clone(pos1);
                    }
                } else {
                    result0 = null;
                    pos = clone(pos1);
                }
                if (result0 !== null) {
                    result0 = (function(offset, line, column, id, pa) {
                        if (pa === "") return { type: "identifier", name: id };
                        return { type: "identifier", name: id, param:pa };
                    })(pos0.offset, pos0.line, pos0.column, result0[1], result0[3]);
                }
                if (result0 === null) {
                    pos = clone(pos0);
                }

                cache[cacheKey] = {
                    nextPos: clone(pos),
                    result:  result0
                };
                return result0;
            }

            function parse_paramList() {
                var cacheKey = "paramList@" + pos.offset;
                var cachedResult = cache[cacheKey];
                if (cachedResult) {
                    pos = clone(cachedResult.nextPos);
                    return cachedResult.result;
                }

                var result0, result1, result2, result3, result4;
                var pos0, pos1;
